name:                wyas
version:             0.1.0.0
synopsis:            Write Yourself a Scheme tutorial workthrough
homepage:            http://github.com/saclark/wyas#readme
license:             MIT
license-file:        LICENSE
author:              Scott Clark
maintainer:          sclarkdev@gmail.com
copyright:           2015 Scott Clark
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Wyas
  build-depends:    base >= 4.7 && < 5
                  , parsec >= 3.1 && < 3.2
                  , mtl

executable wyas
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.7 && < 5
                  , parsec >= 3.1 && < 3.2
                  , mtl
